--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,12 @@
     "react-modal": "^1.3.0",
     "react-router": "^2.5.1",
     "webpack": "^1.13.1"
-  }
+  },
+  "engines": {
+  "node": "6.1.0",
+  "npm": "3.8.6"
+},
+  "scripts": {
+    "postinstall": "./node_modules/.bin/webpack"
+  },
 }
