--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^15.1.0",
     "react-modal": "^1.3.0",
     "react-router": "^2.5.1",
+    "react-tooltip": "^3.0.8",
     "webpack": "^1.13.1"
   },
   "engines": {
