--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flux": "^2.1.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-masonry-component": "^4.1.0",
     "react-modal": "^1.3.0",
     "react-router": "^2.5.1",
     "react-tooltip": "^3.0.8",
